# Temporal_Memory_Graph

./: .gitignore  .mcp.json  CITATION_AUDIT.json  CITATION_AUDIT.md  CLAUDE.md  Deep-Dream-CLI.md  PAPER_PLAN.md  README.en.md  README.ja.md  README.md  SECURITY_AUDIT_REPORT.md  bench_v2.py  benchmark_threads.py  config_loader.py  dashboard  dd_report_pipeline_test.md  docker-compose.yml  example_ollama_chat.py  example_usage.py  findings.md  fix_plan.md  frontend-home  frontend_improvements_summary.md  package-lock.json  progress.md  pyproject.toml  query_entity_relation.py  requirements.txt  search-result  search-result-final  search-test  service_api.py  service_config.example.json  start-tmg.bat  tailwind.config.js  task_plan.md  test.py  test_ui_server.py  visualizer.py  web_server.py
.claude/: settings.json
Fantasyland/: SKILL.md
agent/: __init__.py  logger.py  models.py  orchestrator.py  test_agent.py
core/: __init__.py  cli.py  content_schema.py  debug_log.py  exceptions.py  log.py  models.py  perf.py  text_chunking.py  utils.py
data/: 三体1疯狂年代.txt
docs/: FLOW_DIAGRAM.md  concept_design_principles.md  error_handling_audit_2026-04-26.md  graph_visualization_improvements.md  performance_analysis_2026_04_26.md  performance_analysis_report.md  pipeline_timing_report.md  vision.md  vision_task.md  三体2黑暗森林.txt  三体3死神永生.txt  中宣部授予刘永坦时代楷模称号.txt  中宣部授予吴蓉瑾、王红旭时代楷模称号.txt  中宣部授予王传喜时代楷模称号.txt
figures/: gen_fig_ablation_study.py  gen_fig_attention_heatmap.py  gen_fig_main_results_comparison.py  gen_fig_training_curves.py  paper_plot_style.py
processor/: __init__.py  (+12 more)
(+2459 files in other folders)
